[tool.poetry]
name = "crypto-market"
version = "0.1.0"
description = "Async library for Deribit and Binance futures API"
authors = ["treaditup <draincoder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
progress = "^1.6"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
